# hexadoku

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SUMMARY.md  conanfile.txt
board/: using-board-creator.md
classes/: controllers.md  models.md  views.md
data/board/hexadoku/: example.sudkb
data/board/standard/: example.sudk  example.sudkb
data/game/hexadoku/: example.sudk
data/game/standard/: example.sudk
data/games/hexadoku/: example.sudk
files/: filesystem.md  save-files.md
include/: AbstractState.hpp  Assets.hpp  Attributes.hpp  Color.hpp  Game.hpp  GameModeMenuState.hpp  GamemodeMenuState.hpp  GfxStream.hpp  InsertionPlayState.hpp  MainMenuState.hpp  MenuState.hpp  MovePlayState.hpp  PlayState.hpp  PlayStateAbstract.hpp  Position.hpp  StateContext.hpp
include/Graphics/: Attributes.hpp  Color.hpp  GfxStream.hpp  Position.hpp
include/Menu/: AbstractLoadingMenu.hpp  AbstractMenuState.hpp  BoardCreatorMenu.hpp  LoadGameMenu.hpp  LoadStandardGameMenu.hpp  MainMenuState.hpp  NewGameMenuState.hpp
include/Model/: Board.hpp  BoardCell.hpp  BoardCreator.hpp  BoardSection.hpp  Game.hpp  Hint.hpp  PlayStateModel.hpp
include/State/: AbstractState.hpp  BoardCreatorState.hpp  InsertionPlayState.hpp  MovePlayState.hpp  PlayStateAbstract.hpp
include/State/BoardCreator/: AbstractBoardCreatorState.hpp  ConfirmExitBoardCreatorState.hpp  InsertionBoardCreatorState.hpp  MoveBoardCreatorState.hpp  SaveBoardCreatorState.hpp
include/State/Game/: AbstractGameState.hpp  ConfirmExitGameState.hpp  EndGameState.hpp  InsertionGameState.hpp  InsertionPlayState.hpp  MoveGameState.hpp  MovePlayState.hpp  SaveGameState.hpp
include/State/Menu/: AbstractMenuState.hpp  BoardCreatorMenu.hpp  BoardCreatorMenuState.hpp  LoadBoardMenuState.hpp  LoadBoardSizeMenuState.hpp  LoadGameMenu.hpp  LoadGameMenuState.hpp  LoadGameSizeMenu.hpp  LoadGameSizeMenuState.hpp  LoadOrCreateBoardMenuState.hpp  MainMenuState.hpp  NewGameDifficultyMenuState.hpp  NewGameFromFileMenuState.hpp  NewGameMenuState.hpp
include/Tools/: StringConverter.hpp
include/View/: AbstractView.hpp  BoardView.hpp  CellView.hpp  GameView.hpp  GameViewAbstract.hpp  InsertionGameView.hpp  SectionView.hpp
include/View/Board/: BoardView.hpp  CellView.hpp  SectionView.hpp
include/View/BoardCreator/: AbstractBoardCreatorView.hpp  BoardCreatorViewAbstract.hpp  ConfirmExitBoardCreatorView.hpp  InsertionBoardCreatorView.hpp  MoveBoardCreatorView.hpp
include/View/Game/: AbstractGameView.hpp  ConfirmExitGameView.hpp  GameViewAbstract.hpp  InsertionGameView.hpp  MoveGameView.hpp
include/Views/: Board.hpp  BoardCell.hpp  BoardSection.hpp
src/: AbstractMenuState.cpp  AbstractState.cpp  Assets.cpp  Attributes.cpp  CMakeLists.txt  Color.cpp  Game.cpp  GameModeMenuState.cpp  GamemodeMenuState.cpp  GfxStream.cpp  InsertionPlayState.cpp  MainMenuState.cpp  MenuState.cpp  MovePlayState.cpp  NewGameMenuState.cpp  PlayState.cpp  PlayStateAbstract.cpp  Position.cpp  StateContext.cpp  main.cpp
src/Graphics/: Assets.cpp  Attributes.cpp  Color.cpp  GfxStream.cpp  Position.cpp
src/Menu/: AbstractLoadingMenu.cpp  AbstractMenuState.cpp  BoardCreatorMenu.cpp  LoadGameMenu.cpp  LoadGameSizeMenu.cpp  LoadStandardGameMenu.cpp  MainMenuState.cpp  NewGameMenuState.cpp
src/Model/: Board.cpp  BoardCell.cpp  BoardCreator.cpp  BoardSection.cpp  Game.cpp  Hint.cpp  PlayStateModel.cpp
src/State/: AbstractState.cpp  BoardCreatorState.cpp  InsertionPlayState.cpp  MovePlayState.cpp  PlayStateAbstract.cpp
src/State/BoardCreator/: AbstractBoardCreatorState.cpp  ConfirmExitBoardCreatorState.cpp  InsertionBoardCreatorState.cpp  MoveBoardCreatorState.cpp  SaveBoardCreatorState.cpp
src/State/Game/: AbstractGameState.cpp  ConfirmExitGameState.cpp  EndGameState.cpp  InsertionGameState.cpp  InsertionPlayState.cpp  MoveGameState.cpp  MovePlayState.cpp  PlayStateAbstract.cpp  SaveGameState.cpp
src/State/Menu/: AbstractMenuState.cpp  BoardCreatorMenu.cpp  BoardCreatorMenuState.cpp  LoadBoardMenuState.cpp  LoadBoardSizeMenuState.cpp  LoadGameMenu.cpp  LoadGameMenuState.cpp  LoadGameSizeMenu.cpp  LoadGameSizeMenuState.cpp  LoadOrCreateBoardMenuState.cpp  MainMenuState.cpp  NewGameDifficultyMenuState.cpp  NewGameFromFileMenuState.cpp  NewGameMenuState.cpp
src/Tools/: StringConverter.cpp
src/View/: AbstractView.cpp  BoardView.cpp  CellView.cpp  GameView.cpp  GameViewAbstract.cpp  InsertionGameView.cpp  MoveGameView.cpp  SectionView.cpp
src/View/Board/: BoardView.cpp  CellView.cpp  SectionView.cpp
src/View/BoardCreator/: AbstractBoardCreatorView.cpp  BoardCreatorViewAbstract.cpp  ConfirmExitBoardCreatorView.cpp  InsertionBoardCreatorView.cpp  MoveBoardCreatorView.cpp
src/View/Game/: AbstractGameView.cpp  ConfirmExitGameView.cpp  GameViewAbstract.cpp  InsertionGameView.cpp  MoveGameView.cpp
src/Views/: Board.cpp  BoardCell.cpp  BoardSection.cpp
states/: abstractstate-and-statecontext.md
test/: BoardLoadingTest.cpp  BoardSaveTest.cpp  CMakeLists.txt  StateChangingTest.cpp  TestFoo.cpp  main.cpp
test/Board/: BoardLoadingTest.cpp  BoardSaveTest.cpp  SolveTest.cpp  ViolatingBoardRulesTest.cpp  VioletingBoardRulesTest.cpp  VioletingRulesTest.cpp
test/Game/: GameLoadingTest.cpp  GameRunningTest.cpp  StateChangingTest.cpp
test/Section/: ViolatingSectionRulesTest.cpp  VioletingSectionRulesTest.cpp
